dark mode fixes

--- a/src/ui/discussion-portal/src/theme.scss
+++ b/src/ui/discussion-portal/src/theme.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$angular-primary: mat-palette($mat-teal, 500, 100, 900);
+$angular-primary: mat-palette($mat-blue, 500, 100, 900);
 $angular-accent: mat-palette($mat-pink, A200, A100, A400);
 $angular-warn: mat-palette($mat-red);
 $angular-default-theme: mat-light-theme(
@@ -15,12 +15,15 @@ $angular-default-theme: mat-light-theme(
 );
 @include angular-material-theme($angular-default-theme);
 
+$angular-dark-primary: mat-palette($mat-teal, 500, 100, 900);
+$angular-dark-accent: mat-palette($mat-blue-grey, A200, A100, A400);
+$angular-dark-warn: mat-palette($mat-deep-orange);
 $angular-dark-theme: mat-dark-theme(
   (
     color: (
-      primary: $angular-primary,
-      accent: $angular-accent,
-      warn: $angular-warn,
+      primary: $angular-dark-primary,
+      accent: $angular-dark-accent,
+      warn: $angular-dark-warn,
     ),
   )
 );
@@ -30,8 +33,14 @@ $angular-dark-theme: mat-dark-theme(
   .text-color {
       color: white;
   }
+  a {
+    color: mat-color($angular-dark-primary);
+  }
 }
 // Common Styles
 .text-color {
     color: #3c4146;
+}
+a {
+    color: mat-color($angular-primary);
 }
